<resources>
    <string name="app_name">Country flags quiz</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="entry_name">Please entry your name.</string>
    <string name="e_g_name">e.g John</string>
    <string name="start">Start</string>
    <string name="belong_to">What country does this flag belong to?</string>
    <string name="quiz_image">quiz image</string>
    <string name="submit">submit</string>
    <string name="result">Result</string>
    <string name="congrate">Hey, Congratulations!</string>
    <string name="finish">Finish</string>
</resources>